tests/expectations/compiler/function/empty_arglist_fail.out
Error [ETYC0372113]: Cannot define a function with no parameters.
    --> compiler-test:2:1
     |
   2 | fn x() -> u8 {
     | ^^^^^^^^^^^^^^
   3 |     return 0u8;
     |     ^^^^^^^^^^^
   4 | }
     | ^
Error [ETYC0372170]: Cannot define a function with only empty parameters.
    --> compiler-test:5:1
     |
   5 | fn y(a: [u8;0]) -> [u8;0] {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   6 |     return a;
     |     ^^^^^^^^^
   7 | }
     | ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:8:9
     |
   8 | program test.aleo {}
     |         ^^^^^^^^^
